<resources>
    <string name="app_name">Smart Lamp Controller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Lamp Controller</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_status">Background Process Status</string>
    <string name="btn_txt_on">ON</string>
    <string name="btn_txt_off">OFF</string>
    <string name="title_activity_scrolling">About</string>
    <string name="large_text">
        "'SMART Lamp Controller' app was designed and developed along with semester 5 EN3023 module's group project facilitating HC-05 bluetooth module to be operated via a mobile app.\n\n"

        "Project Team Members\n\n"

        "150146A Chirath Diyagama\n"
        "150271C Iresh Jawardana\n"
        "150273J Mayuka Jayawardhana\n"
        "150274M Chathuri Jayaweera\n"
        "150276V Sandali Jayaweera\n"
        "150277B Lochana Chathura\n"
        "150278E Jizzanee Jazz\n"
        "150299T Naveen Karunanayake\n"
        "150403K Rusiru Mayadunna\n"
        "150517M Ranjula Hettiarachchi\n\n"
    </string>
    <string name="title_activity_scheduler">Scheduler Mode</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="btn_txt_set_start">Set</string>
    <string name="btn_txt_enable">Enable</string>
    <string name="btn_txt_disable">Disable</string>
    <string name="txt_set_start">06:00 PM</string>
    <string name="txt_set_end">12:00 PM</string>
    <string name="txt_current_time">CURRENT TIME</string>
    <string name="txt_test">Test</string>
    <string name="set_schedule">SET SCHEDULE</string>
    <string name="to">TO</string>
    <string name="from">FROM</string>
</resources>
